--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@tippyjs/react": "^4.2.5",
     "bootstrap": "^4.6.0",
+    "formik": "^2.2.6",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-color": "^2.19.3",
